imp note and keywords

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,11 +13,10 @@
       </div>
   
       <div class="important_note montserrat-reg">
-        <div class="important_note_left">You are here because you maybe looking for software development 
-          outsourcing company in India, customised software development company in India, top ai software 
-          development company in India, custom lms learning management system development company in India,
-         top edtech software development company in India, best full stack developer in Pune India, 
-         top full stack software architect in Pune India.
+        <div class="important_note_left">You are here because you maybe looking for trilp software development 
+          company in India, top ai software development company in India, top edtech software development 
+          company in India, best full stack developer in Pune India, best software architect in Pune India, 
+          ai ml internship in India, ai ml training in India.
         </div>
         <div class="important_note_right">
           <div title="Fast delivery times and efficient project turnaround">T<span>urbocharged Turnaround</span></div>
